<resources>
    <string name="app_name">Training and Placement</string>
    <string name="action_settings">Settings</string>
    <string name="pre_placement">Pre-Placement</string>
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="training">Training and </string>
    <string name="placement">Placement</string>
    <string name="register_company">Register Company</string>
    <string name="hint_company_name">Company name</string>
    <string name="button_register">Register</string>
    <string name="student_notice">For Example :
        All the students of TYCM-I, TYCM-II, and TYCM-SS are
        hereby informed that a pool campus activity for diploma
        2019, 2020 and 2021 batch is organized by Infosys.
        </string>
    <string name="add_textview">Add</string>
    <string name="previous_textview">Previous</string>
    <string name="add_pre_placement">Add Pre-Placement</string>
    <string name="add_file_button">Add File</string>
    <string name="submit_button">Submit</string>
    <string name="talks_textview">Talks</string>
    <string name="contact_us_textview">Contact Us</string>
    <string name="username_textview">Username</string>
    <string name="contact_us_email_textview">kkwaghpolytechnicnsk@gmail.com</string>
    <string name="contact_us_name_textview">Prathamesh Sonawane</string>
    <string name="hint_notification">Student/Everyone</string>
    <string name="select_todays_date">Select Today\'s Date</string>
    <string name="update_button">update</string>
    <string name="hint_select_year">Select Year</string>
    <string name="Placement_year_textview">Placement Year</string>
    <string name="artificial_intelligence_machine_learning_checkbox">AI/ML</string>
    <string name="civil_enigineering_checkbox">CE</string>
    <string name="chemical_engineering_checkbox">CH</string>
    <string name="computer_technology_checkbox">CML</string>
    <string name="mechanical_engineering_checkbox">ME</string>
    <string name="information_technology_checkbox">IT</string>
    <string name="electrical_engineering_checkbox">EJ</string>
    <string name="hint_number_of_students_placed">No.of Students Placed</string>

    <!-- TODO: Remove or change this placeholder text -->

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="send_to">Send To…</string>
    <string name="hint_year">Year</string>
    <string name="placement_data_textview">Placement Data</string>
    <string name="hint_average_lpa">Average LPA</string>
    <string name="hint_total_lpa">Total LPA</string>
    <string name="history_textview">History</string>
    <string name="opportunity_textview">Opportunity</string>
    <string name="job_opportunity_textview">Job Opportunity</string>
    <string name="job_description_textview">Job Description</string>
    <string name="summary_textview">Summary</string>
    <string name="key_qualification_textview">Key Qualification</string>
    <string name="location_textview">Location</string>
    <string name="state_textview">State</string>
    <string name="role_textview">Role</string>
    <string name="additional_requirements_textview">Additional Requirements</string>
    <string name="upload_button">Upload</string>
    <string name="company_name_eg_hint">Company Name : Apple</string>
    <string name="role_eg_hint">Systems Experience Engineer</string>
    <string name="location_eg_hint">Boulder,Colorado,United States</string>
    <string name="summary_eg_hint">Posted : Nov 18,2021 <br /> Weekly Hours : 40 <br /> The Interaction Architecture team is searching for a Producer.In this role,you will help the team in organizing our explorations, connection and prototype development work.Your creative practice will be a balance of partnering and directing,i.e. be a coach that works both by watchful observation and active support.You will work closely with the team of foster and nurture ideas,help organize projects, prioritize our work,and be a connector to teams in the studio and across Apple.</string>
    <string name="key_qualification_eg_hint"> \u25CF  Comfortable with ambiguous project goals  <br /> \u25CF  Provide structure and clarity where it’s needed <br />\u25CF  Have a flexible approach to project planning a wide range of project types <br />\u25CF  Experience with both technical and creative development <br />\u25CF  Have experience in both hardware and software design projects <br />\u25CF  Ability to foster and nurture the ideas of the team <br />\u25CF  Have an affinity for Design and Tech <br />\u25CF  Know how to motivate and align diverse groups of people <br />\u25CF  Understand the practice of experience prototyping</string>
    <string name="description_eg_hint">The IA team work with people all over Apple: interface designers, industrial designers, product development, other prototyping groups, technologists, engineers, marketing and executives. The team exists in a multidisciplinary studio environment and participates in individual and group reviews. IA are here to spark inspiration and conversation with their prototypes and then collaborate with other teams at Apple for execution and implementation. We bring ideas to the table and ideas to life.</string>
    <string name="additional_requirements_eg_hint">The IA team work with people all over Apple: interface designers, industrial designers, product development, other prototyping groups, technologists, engineers, marketing and executives. The team exists in a multidisciplinary studio environment and participates in individual and group reviews. IA are here to spark inspiration and conversation with their prototypes and then collaborate with other teams at Apple for execution and implementation. We bring ideas to the table and ideas to life.</string>
    <string name="apply_here_textview">Apply Here</string>
    <string name="apply_for_job_eg_hint">Link for Applying Job</string>
    <string name="about_hint">About</string>
    <string name="contact_details_hint">Contact Details</string>
    <string name="product_or_service_based_company">Product/Service of that Company</string>
    <string name="company_description_hint">Company Description</string>
    <string name="link_for_pre_placement_talks_hint">Link for Pre-Placement Talks</string>
    <string name="details_hint">Details</string>
    <string name="link_for_applying_hint">Link for Applying</string>
    <string name="placement_opportunities_image_of_ui_content_description">Placement Opportunities Image of Ui</string>
    <string name="edit_text">Edit</string>
    <string name="placement_text">Placement</string>
    <string name="opportunities_text">Opportunities</string>
    <string name="add_text">Add</string>
    <string name="arrow_back_of_data_select_placement_opportunity">Arrow Back of Data Select Placement Opportunity</string>
    <string name="select_company_text">Select Company</string>
    <string name="delete_button">Delete</string>
    <string name="existing_text">Existing</string>
    <string name="company_text">Company</string>
    <string name="arrow_back_image_button_in_activity_add_placement_opportunity">Arrow Back ImageButton in Add Placement Opportunity</string>
    <string name="notice_text">Notice</string>
    <string name="add_placement_opportunity_text">Add Placement Opportunity</string>
    <string name="edit_placement_opportunity_text">Edit Placement Opportunity</string>
    <string name="select_branch_textview">Select Branch</string>
    <string name="notify_student_text">Notify Student</string>
    <string name="select_today_s_date_text">Select Today\'s Date</string>
    <string name="send_button_text">Send</string>
    <string name="company_name_image_content_description">Company Name Model</string>
    <string name="today_s_date_hint">Today\'s Date</string>
    <string name="student_or_everyone_hint">Student/Everyone</string>
    <string name="name_text">Name</string>
    <string name="email_text">Email</string>
    <string name="mobile_no_text">Mobile No</string>
    <string name="branch_text">Branch</string>
    <string name="accept_button_text">Accept</string>
    <string name="deny_button_text">deny</string>
    <string name="company_ui_image_view_content_decription">Company UI ImageView Content Decription</string>
    <string name="list_of_text">List Of</string>
    <string name="companies_text">Companies</string>
</resources>