<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.companyactivity.RegisterCompanyActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="match_parent"
        android:layout_height="95dp"
        app:cardBackgroundColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/abhaya_libre"
            android:text="@string/jobopportunity_textview"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="32sp"
            android:textStyle="bold" />
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView2">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/text_corner_radius"
            android:ems="10"
            android:fontFamily="@font/abhaya_libre"
            android:hint="@string/company_name_eg_hint"
            android:inputType="textPersonName"
            android:padding="15dp"
            android:textColorHint="#A63A3535"
            android:textSize="20dp" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="35dp"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/abhaya_libre"
                    android:text="@string/role_textview"
                    android:textSize="18sp" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:background="@drawable/text_corner_radius"
                    android:fontFamily="@font/abhaya_libre"

                    android:hint="@string/role_eg_hint"
                    android:inputType="textMultiLine"
                    android:padding="15dp"
                    android:textColorHint="#A63A3535"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/textView15"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="35dp"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/abhaya_libre"
                    android:text="@string/location_textview"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/editTextTextMultiLine4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:background="@drawable/text_corner_radius"

                    android:fontFamily="@font/abhaya_libre"
                    android:hint="@string/location_eg_hint"
                    android:inputType="textMultiLine"
                    android:padding="15dp"
                    android:textColorHint="#A63A3535"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/textView14"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="35dp"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/abhaya_libre"
                    android:text="@string/summary_textview"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/editTextTextMultiLine3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:background="@drawable/text_corner_radius"

                    android:fontFamily="@font/abhaya_libre"
                    android:hint="@string/summary_eg_hint"
                    android:inputType="textMultiLine"
                    android:padding="15dp"
                    android:textColorHint="#A63A3535"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/textView13"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="35dp"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/abhaya_libre"
                    android:text="@string/key_qualification_textview"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/editTextTextMultiLine2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:background="@drawable/text_corner_radius"

                    android:fontFamily="@font/abhaya_libre"
                    android:hint="@string/key_qualification_eg_hint"
                    android:inputType="textMultiLine"
                    android:padding="15dp"
                    android:textColorHint="#A63A3535"
                    android:textSize="20sp" />
                <TextView
                    android:id="@+id/textView12"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="35dp"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/abhaya_libre"
                    android:text="@string/description_textview"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/editTextTextMultiLine"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:background="@drawable/text_corner_radius"

                    android:fontFamily="@font/abhaya_libre"
                    android:hint="@string/description_eg_hint"
                    android:inputType="textMultiLine"
                    android:padding="15dp"
                    android:textColorHint="#A63A3535"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/textView17"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="35dp"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/abhaya_libre"
                    android:text="@string/additional_requirments_textview"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/editTextTextMultiLine5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:background="@drawable/text_corner_radius"

                    android:fontFamily="@font/abhaya_libre"
                    android:hint="@string/additional_requirements_eg_hint"
                    android:inputType="textMultiLine"
                    android:padding="15dp"
                    android:textColorHint="#A63A3535"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/textView18"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="35dp"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/abhaya_libre"
                    android:text="@string/apply_here_textview"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/editTextTextMultiLine6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:background="@drawable/text_corner_radius"

                    android:fontFamily="@font/abhaya_libre"
                    android:hint="@string/apply_for_job_eg_hint"
                    android:inputType="textMultiLine"
                    android:padding="15dp"
                    android:textColorHint="#A63A3535"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/id_register_company_button"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="15dp"
                    android:backgroundTint="@color/black"
                    android:fontFamily="@font/abhaya_libre"
                    android:text="@string/upload_button"
                    android:textSize="16sp"
                    app:cornerRadius="20dp" />

            </LinearLayout>
        </ScrollView>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>